<resources>
    <string name="app_name">BMind</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_password_confirm">Confirmar contraseña</string>
    <string name="register_info_email">Tendrás que confirmar esta dirección de correo electrónico</string>
    <string name="register_info_password">Debe tener al menos ocho caracteres</string>
    <string name="error_password">La constraseña es aún corta </string>
    <string name="button_login">Inicia sesión</string>
    <string name="button_register">Regístrate</string>
    <string name="need_account">¿Necesitas una cuenta?</string>
    <string name="create_account">Crear cuenta</string>
    <string name="button_register_me">Registrarme</string>
    <string name="do_pst">Realizar cuestionario</string>
    <string name="home">Home</string>
    <string name="button_new_pst">Nueva medición</string>
    <string name="title_activity_graphics">GraphicsActivity</string>

    <string name="phone_usage_info">Utiliza tu celular de manera consciente para estar en el momento presente.</string>
    <string name="allow_usage_permissions">Debes activar el acceso a datos de uso.</string>
    <string name="logout">¿Estas segura de cerrar sesión?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
