<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".splash.SplashFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">

        <ImageView
            android:id="@+id/splash_image"
            android:layout_width="144dp"
            android:layout_height="200dp"
            android:background="@color/colorAccent"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="80dp"
            android:text="@string/app_name"
            android:textAllCaps="false"
            android:textSize="48dp"
            android:textStyle="bold"/>


        <android.support.design.button.MaterialButton
            android:id="@+id/signin_button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_login"
            android:textAppearance="?android:textAppearanceButton"
            app:cornerRadius="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/need_account"
            android:textColor="@color/common_google_signin_btn_text_light"
            android:textSize="16sp" />

        <android.support.design.button.MaterialButton
            android:id="@+id/register_button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_register"
            android:textAppearance="?android:textAppearanceButton"
            app:cornerRadius="16dp" />

    </LinearLayout>


</ScrollView>